# ObfuseConfuse

./: .gitmodules  CMakeLists.txt  main.cpp  utils.cpp  utils.h
Obfuscators/Text/: AbstractTextObfuscator.cpp  AbstractTextObfuscator.h  Jumper.cpp  Jumper.h  Junk.cpp  Junk.h  Shuffler.cpp  Shuffler.h
